(fix/auth): fix JWT auth login